--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-preset-es2015": "^6.6.0",
     "core-gulp-tasks": "github:cloudfour/core-gulp-tasks#v0.1.2",
     "core-hbs-helpers": "github:cloudfour/core-hbs-helpers#v0.1",
-    "drizzle-builder": "github:cloudfour/drizzle-builder#0.0.1",
+    "drizzle-builder": "0.0.1-alpha",
     "eslint": "^2.7.0",
     "eslint-config-xo-space": "^0.12.0",
     "eslint-plugin-babel": "^3.2.0",
