--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "core-gulp-tasks": "github:cloudfour/core-gulp-tasks#v0.1.2",
-    "core-hbs-helpers": "github:cloudfour/core-hbs-helpers#v0.1",
-    "drizzle-builder": "0.0.1-alpha",
+    "core-gulp-tasks": "github:cloudfour/core-gulp-tasks#v0.1.4",
+    "core-hbs-helpers": "github:cloudfour/core-hbs-helpers#v0.1.1",
+    "drizzle-builder": "0.0.2-alpha",
+    "eslint": "^2.7.0",
     "eslint-config-xo-space": "^0.12.0",
     "eslint-plugin-babel": "^3.2.0",
-    "eslint": "^2.7.0",
     "gulp": "^3.9.1",
+    "postcss-cssnext": "^2.5.2",
     "prismjs": "^1.4.1",
     "suitcss-base": "^2.0.0",
     "suitcss-components-arrange": "^1.1.1",
