--- a/src/data/articles.yaml
+++ b/src/data/articles.yaml
@@ -16,7 +16,7 @@
 - title: A second article, also not real
   author: Author Name
   date: 2016-05-10
-  excerpt: Second article excerpt. THis one is a bit longer, but still short.
+  excerpt: Second article excerpt. This one is a bit longer, but still short.
   body: |
     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
