--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-xo-space": "^0.12.0",
     "eslint-plugin-babel": "^3.2.0",
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-util": "^3.0.7",
     "postcss-cssnext": "^2.5.2",
     "prismjs": "^1.4.1",
