--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "@cloudfour/gulp-tasks": "^2.0.1",
+    "@cloudfour/hbs-helpers": "^0.6.1",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "core-gulp-tasks": "github:cloudfour/core-gulp-tasks#v2.0.0",
-    "core-hbs-helpers": "github:cloudfour/core-hbs-helpers#v0.4.0",
     "drizzle-builder": "0.0.9",
     "eslint": "^2.7.0",
     "eslint-config-xo-space": "^0.12.0",
