Updated npm build script to run gulp after prestart

--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
   "scripts": {
     "prestart": "npm install",
     "start": "gulp --dev",
-    "build": "npm run prestart && npm start"
+    "build": "npm run prestart && gulp"
   }
 }
