--- a/package.json
+++ b/package.json
@@ -34,13 +34,19 @@
     "babel-preset-es2015": "^6.6.0",
     "doctoc": "^1.1.1",
     "drizzle-builder": "0.0.10",
-    "eslint": "^2.7.0",
+    "eslint": "^5.0.1",
     "eslint-config-xo-space": "^0.12.0",
     "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-unicorn": "^4.0.3",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-util": "^3.0.7",
     "postcss-cssnext": "^2.5.2",
+    "prettier": "^1.13.7",
     "prismjs": "^1.4.1",
     "suitcss-base": "^2.0.0",
     "suitcss-components-arrange": "^1.1.1",
@@ -52,6 +58,14 @@
     "prestart": "npm install",
     "start": "gulp --dev",
     "build": "npm run prestart && gulp",
-    "docs": "doctoc --title \"### Contents\" --maxlevel 2 docs/README.md"
+    "docs": "doctoc --title \"### Contents\" --maxlevel 2 docs/README.md",
+    "check-lint": "prettier --list-different '**/*.js' && eslint '**/*.js'",
+    "lint": "prettier --write '**/*.js' && eslint --fix '**/*.js'"
+  },
+  "eslintConfig": {
+    "extends": "@cloudfour/eslint-config"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
