Add prettierignore and eslintignore

--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
   "eslintConfig": {
     "extends": "@cloudfour/eslint-config"
   },
+  "eslintIgnore": [
+    "dist"
+  ],
   "prettier": {
     "singleQuote": true
   }
